--- a/style.css
+++ b/style.css
@@ -76,11 +76,21 @@ tr.item-todo {
   background-color: #f4ebaf;
 }
 
-a {
-  text-decoration: none;
-  color: black;
+button {
+  background-color: #79addc;
+  border-style: none;
+  padding: 15px;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 tr.item-done {
   background-color: grey;
+  text-align: center;
+}
+
+.material-icons {
+  font-size: 30px;
 }
